# light-gelf-collector-rs

./: Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  telegraf.conf
src/: compression.rs  config.rs  gelf.rs  lib.rs  main.rs  storage.rs  udp_handler.rs
src/web/: handlers.rs  interface.rs  mod.rs  routes.rs
